<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Synergy</string>
    <string name="clientdesc">Synergy Client Name:</string>
    <string name="client">android</string>
    <string name="hostdesc">Server IP/Hostname:</string>
    <string name="host">igsarmewmactck</string>
    <string name="connect">Connect</string>
    <string name="server_port_text">Server Port:</string>
    <string name="server_port_default">24800</string>
    <string name="device_name_label">Input device name:</string>
    <string name="device_name_default">touchscreen</string>
    <string name="synergy_connected">Synergy Connected</string>
    <string name="disconnect">Disconnect</string>
    <string name="ui_connecting">Connecting to %s</string>
    <string name="ui_connected">Connected to %s</string>
    <string name="ui_disconnected">Disconnected from %s</string>
    <string name="ui_connection_failed">Connection Failed</string>
    <string name="ui_disconnecting">Disconnecting..</string>
</resources>
