<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent">

    <TextView android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:text="@string/clientdesc"
              android:id="@+id/clientNameTextView"/>

    <EditText android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:background="@android:drawable/edit_text"
              android:textColor="@android:color/widget_edittext_dark"
              android:text="@string/client"
              android:id="@+id/clientNameEditText"/>

    <TextView android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:text="@string/hostdesc"
              android:id="@+id/serverHostTextView"/>

    <EditText android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:background="@android:drawable/edit_text"
              android:textColor="@android:color/widget_edittext_dark"
              android:text="@string/host"
              android:id="@+id/serverHostEditText"/>

    <TextView android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:text="Server Port:"
              android:id="@+id/serverPortTextView"/>

    <EditText android:id="@+id/serverPortEditText"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:background="@android:drawable/edit_text"
              android:textColor="@android:color/widget_edittext_dark"
              android:inputType="number"
              android:text="24800"/>

    <TextView android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:text="Input device name:"
              android:id="@+id/inputDeviceTextView"/>

    <EditText android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:background="@android:drawable/edit_text"
              android:textColor="@android:color/widget_edittext_dark"
              android:text="touchscreen"
              android:id="@+id/inputDeviceEditText"/>

    <Button android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/inputDeviceEditText"
            android:text="@string/connect"
            android:id="@+id/connectButton"/>

    <EditText android:id="@+id/outputEditText"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:background="@android:drawable/edit_text"
              android:textColor="@android:color/widget_edittext_dark"
              android:gravity="fill"/>

</LinearLayout>
